# XSight-AI-Repo-Assistant-on-CLI

./: .gitignore  README.md  pyproject.toml
src/xsight/: __init__.py
src/xsight/calls/: core.py  models.py
src/xsight/chat/: core.py  models.py  prompt.py  repo_summary.py
src/xsight/chunker/: core.py  models.py
src/xsight/cli/: __init__.py  main.py
src/xsight/config/: ignore.py  language_map.py  settings.py
src/xsight/database/: connection.py  models.py  repositories.py
src/xsight/embeddings/: core.py  models.py  provider.py
src/xsight/expansion/: core.py  models.py
src/xsight/graph/: builder.py  enrichment.py
src/xsight/imports/: core.py  models.py
src/xsight/indexer/: core.py  models.py
src/xsight/llm/: __init__.py  provider.py
src/xsight/parser/: core.py  models.py
src/xsight/retrieval/: core.py
src/xsight/scanner/: core.py  models.py
src/xsight/tests/: calls_fixture.py  chat_core_fixture.py  chunker_fixture.py  diagnose_contains.py  graph_fixture.py  imports_fixture.py  indexer_fixture.py  init_pipeline_fixture.py  parser_fixture.py  test_architecture_stats_fixture.py  test_bfs_calls_fixture.py  test_calls_fixture.py  test_chat_core_fixture.py  test_chunk_one_fixture.py  test_chunker_fixture.py  test_chunker_smoke.py  test_dependencies_fixture.py  test_embeddings_fixture.py  test_embeddings_smoke.py  test_enrichment_fixture.py  test_expansion_fixture.py  test_graph_command_fixture.py  test_graph_fixture.py  test_graph_smoke.py  test_hybrid_fixture.py  test_imports_fixture.py  test_indexer_fixture.py  test_init_pipeline_fixture.py  (+17 more)
(+19 files in other folders)
