[project]
name = "xsight"
version = "0.1.0"
description = "Agentic AI-powered Code Intelligence System using Graph RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic-settings>=2.2",
    "tree-sitter>=0.26.0",
    "tree-sitter-python>=0.25.0",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "requests>=2.34.2",
    "qdrant-client>=1.18.0",
    "google-genai>=2.10.0",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
xsight = "xsight.cli.main:app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
